--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "type": "module",
   "dependencies": {
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.95.6",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
